feat: add modal dialog

--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,6 +1,4 @@
 .container
   width: 85%
-  max-width: 89.71rem
+  max-width: 1256px
   margin: auto
-  &__header
-    margin: 0 7.243rem 0 5.657rem
