--- a/css/style.css
+++ b/css/style.css
@@ -342,12 +342,43 @@ template {
     .button--outline:hover {
       background-color: #E3B873; }
 
+.label {
+  font-size: 1.07rem; }
+  .label--light {
+    color: rgba(255, 255, 255, 0.5); }
+
+.input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+  font-size: 1.285rem;
+  color: #fff;
+  padding: 0.5rem 0; }
+  .input::placeholder {
+    color: #fff; }
+
+.policy__checkbox {
+  opacity: 0;
+  visibility: hidden; }
+  .policy__checkbox:checked + .policy__label::before {
+    background: #E3B873 url("../img/check.svg") no-repeat center/0.8rem; }
+
+.policy__label {
+  display: flex;
+  align-items: center; }
+  .policy__label::before {
+    content: '';
+    width: 18px;
+    height: 18px;
+    border: 1px solid #E3B873;
+    border-radius: 1px;
+    cursor: pointer;
+    margin-right: 0.64rem; }
+
 .container {
   width: 85%;
-  max-width: 89.71rem;
+  max-width: 1256px;
   margin: auto; }
-  .container__header {
-    margin: 0 7.243rem 0 5.657rem; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
@@ -398,25 +429,30 @@ img {
   width: 100%;
   z-index: 99;
   background-color: #131313;
-  padding: 1.643rem 0; }
+  padding: 24px 0; }
 
 .menu {
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  justify-content: space-between; }
+  .menu__logo {
+    flex-basis: 14.331%; }
+  .menu__nav {
+    flex-basis: 43.153%; }
+  .menu__contacts {
+    flex-basis: 26.433%; }
 
 .logo {
-  font-size: 1.075rem;
   color: #E3B873;
   text-transform: uppercase; }
 
 .nav {
-  margin-left: 1.6rem; }
+  display: flex;
+  justify-content: space-between; }
   .nav__item {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    margin-right: 2.6rem;
     transition: color 0.3s; }
     .nav__item:hover {
       color: #E3B873; }
@@ -424,11 +460,14 @@ img {
 .phone {
   color: #E3B873; }
 
-.contacts__phone {
-  margin-right: 3.21rem;
-  transition: color 0.3s; }
-  .contacts__phone:hover {
-    color: #fff; }
+.contacts {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .contacts__phone {
+    transition: color 0.3s; }
+    .contacts__phone:hover {
+      color: #fff; }
 
 .hero {
   position: relative;
@@ -631,7 +670,8 @@ img {
   justify-content: center; }
   .modal__dialog {
     position: relative;
-    background: #131313;
+    max-width: 36.36rem;
+    background: #131313 url("../img/bg-lines.svg") no-repeat center;
     padding: 2.357rem 3.5rem 1.928rem;
     color: #fff; }
   .modal__close {
@@ -642,58 +682,71 @@ img {
     height: 28px;
     background: transparent url("../img/close.svg") no-repeat center;
     border: none;
-    margin: 12px; }
+    margin: 12px;
+    cursor: pointer; }
+  .modal__title {
+    font-family: 'Yeseva One', cursive;
+    font-size: 1.357rem;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 2.428rem; }
+  .modal__form {
+    display: flex;
+    flex-direction: column; }
+  .modal__input {
+    margin-bottom: 3.428rem; }
+    .modal__input:last-of-type {
+      margin-bottom: 1rem; }
+  .modal__policy {
+    margin-bottom: 2.7rem; }
+  .modal__button {
+    align-self: flex-end; }
 
-@media screen and (max-width: 1300px) {
-  .contacts__phone {
-    font-size: 0.85rem;
-    margin-right: 2.5rem; }
-  .button {
-    font-size: 0.8rem;
-    padding: 0.6rem 1.21rem; }
-  .container__header {
-    margin: 0 6.2rem 0 4.98rem; }
-  .nav {
-    margin-left: 1rem;
-    font-size: 0.85rem; }
-    .nav__item {
-      margin-right: 2.1rem; }
-  .logo {
-    font-size: 0.9rem; }
-  .header {
-    padding: 1.2rem 0; }
+@media screen and (max-width: 1380px) {
+  .menu__contacts {
+    flex-basis: 30%; } }
+
+@media screen and (max-width: 1240px) {
+  .menu__contacts {
+    flex-basis: 30%; }
+  .menu__logo {
+    flex-basis: 16%; } }
+
+@media screen and (max-width: 1170px) {
+  .menu__contacts {
+    flex-basis: 32%; }
+  .menu__logo {
+    flex-basis: 18%; } }
+
+@media screen and (max-width: 1060px) {
+  .menu__contacts {
+    flex-basis: 34%; }
+  .menu__logo {
+    flex-basis: 20%; }
   .hero__instagram {
-    max-width: 4.9rem; } }
+    display: none; } }
 
-@media screen and (max-width: 1199px) {
-  .container__header {
-    margin: 0 1rem 0 5.657rem; }
-  .nav {
-    margin-left: 0; }
-    .nav__item {
-      margin-right: 0.8rem; } }
+@media screen and (max-width: 1060px) {
+  .menu__contacts {
+    flex-basis: 19%; }
+  .menu__logo {
+    flex-basis: 23%; }
+  .menu__nav {
+    flex-basis: 55%; }
+  .contacts {
+    justify-content: flex-end; }
+    .contacts__button {
+      display: none; } }
 
-@media screen and (max-width: 1100px) {
-  .container {
-    width: 86.4%; }
+@media screen and (max-width: 820px) {
   .nav {
     display: none; }
-  .hero__instagram {
-    display: none; }
-  .hero__content {
-    margin-left: 0; } }
+  .menu__contacts {
+    flex-basis: 49%; }
+  .menu__logo {
+    flex-basis: 49%; } }
 
 @media screen and (max-width: 760px) {
-  .container {
-    width: 89.4%; }
-    .container__header {
-      margin: 0 1rem 0 5.657rem; }
-  .nav {
-    display: none; }
-  .hero__instagram {
-    display: none; }
-  .hero__content {
-    margin-left: 0; }
   .row {
     flex-direction: column;
     align-items: center; }
@@ -742,7 +795,6 @@ img {
     max-width: 21.06rem;
     font-size: 1.06rem; }
   .contacts__phone {
-    margin: auto;
     color: #fff;
     text-decoration: none; }
   .contacts__button {
@@ -771,10 +823,6 @@ img {
 @media screen and (max-height: 570px) {
   .hero__scroll-down {
     display: none; } }
-
-@media screen and (min-width: 1450px) {
-  .container {
-    max-width: none; } }
 
 @media screen and (min-width: 760px) {
   .row {
