--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,56 +1,49 @@
-@media screen and ( max-width: 1300px) //до 1300px
+@media screen and ( max-width: 1380px) //до 1380px
+  .menu
+    &__contacts
+      flex-basis: 30%
+@media screen and ( max-width: 1240px) //до 1240px
+  .menu
+    &__contacts
+      flex-basis: 30%
+    &__logo
+      flex-basis: 16%
+@media screen and ( max-width: 1170px) //до 1170px
+  .menu
+    &__contacts
+      flex-basis: 32%
+    &__logo
+      flex-basis: 18%
+@media screen and ( max-width: 1060px) //до 1060px
+  .menu
+    &__contacts
+      flex-basis: 34%
+    &__logo
+      flex-basis: 20%
+  .hero
+    &__instagram
+      display: none    
+@media screen and ( max-width: 1060px) //до 1060px
+  .menu
+    &__contacts
+      flex-basis: 19%
+    &__logo
+      flex-basis: 23%
+    &__nav
+      flex-basis: 55%      
   .contacts
-    &__phone
-      font-size: 0.85rem 
-      margin-right: 2.5rem
-  .button 
-    font-size: 0.8rem
-    padding: 0.6rem 1.21rem
-  .container
-    &__header
-      margin: 0 6.2rem 0 4.98rem
-  .nav
-    margin-left: 1rem
-    font-size: 0.85rem
-    &__item
-      margin-right: 2.1rem
-  .logo
-    font-size: 0.9rem
-  .header
-    padding: 1.2rem 0
-  .hero
-    &__instagram
-      max-width: 4.9rem
-@media screen and ( max-width: 1199px) //до 1200px
-  .container
-    &__header
-      margin: 0 1rem 0 5.657rem
-  .nav
-    margin-left: 0
-    &__item
-      margin-right: 0.8rem
-@media screen and ( max-width: 1100px ) // от 768 до 1100px  — планшеты
-  .container
-    width: 86.4%
+    justify-content: flex-end
+    &__button
+      display: none
+@media screen and ( max-width: 820px) //до 820px
   .nav
     display: none
-  .hero
-    &__instagram
-      display: none
-    &__content
-      margin-left: 0
+  .menu
+    &__contacts
+      flex-basis: 49%
+    &__logo
+      flex-basis: 49%                                     
 @media screen and ( max-width: 760px ) /*breakpoint4: от 576 до 760px — смартфоны / планшеты*/
-  .container
-    width: 89.4%
-    &__header
-      margin: 0 1rem 0 5.657rem
-  .nav
-    display: none
-  .hero
-    &__instagram
-      display: none
-    &__content
-      margin-left: 0
   .row
     flex-direction: column
     align-items: center
@@ -106,7 +99,6 @@
         font-size: 1.06rem
   .contacts
     &__phone
-      margin: auto
       color: $light
       text-decoration: none
     &__button
@@ -136,15 +128,6 @@
  .hero
    &__scroll-down
      display: none
-@media screen and ( min-width: 1450px ) //от 1450px — больше мониторы компьютеров
-  .container
-    max-width: none
-  // .nav
-  //   &__item
-  //     margin-right: 1rem
-  // .contacts
-  //   &__phone
-  //     margin-right: 0.51rem
 @media screen and ( min-width: 760px) //от 760px
   .row
     display: flex
