--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -5,30 +5,37 @@
   width: 100%
   z-index: 99
   background-color: $dark
-  padding: 1.643rem 0
+  padding: 24px 0
 .menu
   display: flex
-  justify-content: space-between
   align-items: center
+  justify-content: space-between
+  &__logo
+    flex-basis: 14.331%
+  &__nav
+    flex-basis: 43.153%
+  &__contacts
+    flex-basis: 26.433%  
 .logo
-  font-size: 1.075rem
   color: $primary
   text-transform: uppercase
 .nav
-  margin-left: 1.6rem
+  display: flex
+  justify-content: space-between
   &__item
     color: $light
     text-decoration: none
     text-transform: uppercase
-    margin-right: 2.6rem
     transition: color 0.3s
     &:hover
       color: $primary
 .phone
   color: $primary
 .contacts
+  display: flex
+  align-items: center
+  justify-content: space-between
   &__phone
-    margin-right: 3.21rem
     transition: color 0.3s
     &:hover
       color: $light  
