--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -13,7 +13,8 @@
   justify-content: center
   &__dialog
     position: relative
-    background: $dark
+    max-width: 36.36rem
+    background: $dark url('../img/bg-lines.svg') no-repeat center
     padding: 2.357rem 3.5rem 1.928rem
     color: $light
   &__close
@@ -25,4 +26,21 @@
     background: transparent url('../img/close.svg') no-repeat center
     border: none
     margin: 12px
-    
+    cursor: pointer
+  &__title
+    font-family: 'Yeseva One', cursive
+    font-size: 1.357rem
+    text-align: center
+    margin: 0
+    margin-bottom: 2.428rem
+  &__form
+    display: flex
+    flex-direction: column
+  &__input
+    margin-bottom: 3.428rem
+    &:last-of-type
+      margin-bottom: 1rem
+  &__policy
+    margin-bottom: 2.7rem
+  &__button
+    align-self: flex-end
