--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -29,7 +29,7 @@
 .input
   background-color: transparent
   border: none
-  border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15)
   font-size: 1.285rem
   color: $light
   padding: 0.5rem 0
@@ -39,6 +39,7 @@
   &__checkbox
     opacity: 0
     visibility: hidden
+    display: none
     &:checked +
       .policy__label
         &::before
