--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -38,19 +38,20 @@
     line-height: 1.857rem
     text-align: center
     margin: 0
-    margin-bottom: 2.428rem
+    margin-bottom: 1.928rem
   &__form
     display: flex
     flex-direction: column
   &__input
-    margin-bottom: 3.428rem
+    margin-bottom: 3.228rem
     &:last-of-type
-      margin-bottom: 1rem
+      margin-bottom: 1.2rem
   &__policy
-    font-size: 1.243rem
+    font-size: 1.143rem
     margin-bottom: 2.7rem
   &__button
     align-self: flex-end
     font-family: 'Futura Demi', cursive
     font-size: 0.929rem
-    padding: 1.257rem 3.171rem
+    padding: 1.257rem 3.271rem 1.457rem 3.171rem
+    margin-right: 0.35rem
