--- a/css/style.css
+++ b/css/style.css
@@ -376,6 +376,9 @@ template {
     cursor: pointer;
     margin-right: 0.64rem; }
 
+li {
+  list-style-type: none; }
+
 .container {
   width: 85%;
   max-width: 1256px;
@@ -496,12 +499,14 @@ img {
     margin-bottom: 1rem; }
   .hero__text {
     font-size: 1.57rem;
-    line-height: 131%;
+    line-height: 143.3%;
     max-width: 35.7rem;
-    margin: 0 0 3.5rem 0; }
+    margin: 0 0 3.3rem 0; }
   .hero__button {
+    max-width: 14.786rem;
+    width: 100%;
     margin-right: 1.43rem;
-    padding: 1.4rem 2.5rem; }
+    padding: 1.2rem 1.5rem; }
   .hero__instagram {
     position: absolute;
     left: 0;
@@ -562,10 +567,11 @@ img {
 
 .title {
   margin: 0;
+  margin-bottom: 1.1rem;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
-  font-size: 2.857rem;
-  line-height: 1.4;
+  font-size: 2.855rem;
+  line-height: 1.3;
   font-weight: normal; }
   .title--primary {
     color: #E3B873; }
@@ -579,49 +585,51 @@ img {
   justify-content: space-between; }
 
 .col {
-  flex-basis: 32%; }
+  flex-basis: 31.715%; }
 
-.card__image {
-  display: block;
-  width: 100%; }
-
-.card__text {
-  position: relative;
-  margin: 0 auto;
-  margin-top: -9.3rem;
-  padding: 1.79rem 2.14rem;
-  max-width: 23.6rem;
-  background-color: #fff;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
-
-.card__title {
-  font-family: 'Yeseva One', cursive;
-  font-size: 1.29rem;
-  margin-top: 0;
-  margin-bottom: 0.7rem; }
-
-.card__list {
-  padding: 0 0 0 1rem;
-  margin: 0;
-  font-size: 1.07rem;
-  line-height: 1.79rem;
-  color: #959595;
-  margin-bottom: 2.5rem; }
-
-.card__pricetag {
-  position: absolute;
-  left: 0;
-  bottom: -1.79rem;
-  font-size: 1.29rem;
-  font-family: 'Yeseva One', cursive;
-  text-transform: uppercase;
-  background-color: #E3B873;
-  color: #fff;
-  padding: 1.214rem 1rem;
-  box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
-  width: 16.285rem;
-  height: 3.857rem;
-  text-align: center; }
+.card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .card__maxmargin {
+    margin-left: 2.429rem; }
+  .card__minmargin {
+    margin-left: 2.214rem; }
+  .card__image {
+    display: block;
+    width: 100%; }
+  .card__text {
+    position: relative;
+    margin-top: -9.1rem;
+    padding: 1.79rem 0;
+    width: 84.184%;
+    background-color: #fff;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03); }
+  .card__title {
+    font-family: 'Yeseva One', cursive;
+    font-size: 1.29rem;
+    margin-top: 0;
+    margin-bottom: -0.4rem; }
+  .card__list {
+    padding: 0;
+    font-size: 1.07rem;
+    line-height: 1.79rem;
+    color: #959595;
+    margin-bottom: 2.5rem; }
+  .card__pricetag {
+    position: absolute;
+    left: 0;
+    bottom: -1.79rem;
+    font-size: 1.29rem;
+    font-family: 'Yeseva One', cursive;
+    text-transform: uppercase;
+    background-color: #E3B873;
+    color: #fff;
+    padding: 1.214rem 1rem;
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+    width: 16.285rem;
+    height: 3.857rem;
+    text-align: center; }
 
 .design {
   background-color: #131313; }
@@ -732,23 +740,19 @@ img {
 
 @media screen and (max-width: 1060px) {
   .menu__contacts {
-    flex-basis: 34%; }
-  .menu__logo {
-    flex-basis: 20%; }
-  .hero__instagram {
-    display: none; } }
-
-@media screen and (max-width: 1060px) {
-  .menu__contacts {
     flex-basis: 19%; }
   .menu__logo {
     flex-basis: 23%; }
   .menu__nav {
     flex-basis: 55%; }
+  .hero__instagram {
+    display: none; }
   .contacts {
     justify-content: flex-end; }
     .contacts__button {
-      display: none; } }
+      display: none; }
+  .card__text {
+    margin-top: -4.3rem; } }
 
 @media screen and (max-width: 820px) {
   .nav {
@@ -767,6 +771,14 @@ img {
   .card__text {
     margin-left: 0; } }
 
+@media screen and (max-width: 650px) {
+  .hero__button {
+    display: block;
+    min-width: 100%;
+    font-size: 0.94rem;
+    padding: 1.15rem 0;
+    margin-bottom: 1.85rem; } }
+
 @media screen and (max-width: 600px) {
   .container {
     width: 90.4%; }
@@ -779,25 +791,25 @@ img {
       font-size: 0.91rem; }
   .col {
     margin-bottom: 0.8rem; }
-  .card__text {
-    max-width: 79.4%;
-    margin-top: -10.1rem;
-    padding: 1.7rem 0 0.01rem 2rem;
-    margin-left: 0;
-    box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.05); }
-  .card__title {
-    font-size: 1.07rem;
-    margin-top: 0;
-    margin-bottom: 0.7rem; }
-  .card__list {
-    font-size: 0.94rem;
-    line-height: 174.4%;
-    margin: -0.3rem 0 2.8rem 0; }
-  .card__pricetag {
-    width: 13.602rem;
-    height: 2.857rem;
-    font-size: 1.05rem;
-    padding: 0.614rem 0.7rem; }
+  .card {
+    justify-content: flex-start; }
+    .card__text {
+      max-width: 79.4%;
+      margin-top: -10.1rem;
+      padding: 1.7rem 0 0.01rem 2rem;
+      box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.05); }
+    .card__title {
+      font-size: 1.07rem;
+      margin: 0 0 0.7rem 0; }
+    .card__list {
+      font-size: 0.94rem;
+      line-height: 174.4%;
+      margin: -0.3rem 0 2.8rem 0; }
+    .card__pricetag {
+      width: 13.602rem;
+      height: 2.857rem;
+      font-size: 1.05rem;
+      padding: 0.614rem 0.7rem; }
   .types__section-title {
     margin-bottom: 2.9rem; }
   .section-title__heading {
@@ -815,22 +827,21 @@ img {
     font-size: 1.64rem; }
   .hero__title {
     font-size: 1.64rem;
+    line-height: 136.13%;
     max-width: 22.86rem;
-    margin-bottom: 1.14rem; }
+    margin-bottom: 0.84rem; }
   .hero__scroll-down {
     display: none; }
   .hero__content {
     flex-direction: column;
-    max-width: 100%; }
+    max-width: 100%;
+    margin: auto;
+    margin-top: -11.9rem; }
   .hero__text {
     font-size: 1.29rem;
+    line-height: 136.13%;
     max-width: 22.86rem;
-    margin-bottom: 2.28rem; }
-  .hero__button {
-    display: block;
-    min-width: 100%;
-    padding: 1.35rem 3rem;
-    margin-bottom: 1.85rem; } }
+    margin-bottom: 2.8rem; } }
 
 @media screen and (max-height: 570px) {
   .hero__scroll-down {
@@ -841,17 +852,23 @@ img {
     display: flex;
     align-items: flex-start;
     justify-content: space-between; }
-  .card {
-    flex-basis: 32%; }
-    .card__list li:nth-child(n+8) {
-      display: block; }
+  .col {
+    flex-basis: 31.715%; }
+  .card__list li:nth-child(n+8) {
+    display: block; }
   .design {
     background-color: #fff; }
+    .design__pricetag {
+      text-align: left;
+      padding-left: 2.5rem; }
     .design__section-title {
       color: #131313;
-      margin-bottom: 3.38rem; }
+      margin-bottom: 3.2rem; }
     .design__card {
       margin-bottom: 5.7rem; }
   .section-title__description {
     max-width: 52.9rem;
-    font-size: 1.425rem; } }
+    font-size: 1.425rem;
+    margin-top: 1.64rem; }
+  .section-title__heading {
+    font-size: 1.4rem; } }
