--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -24,12 +24,14 @@
     margin-bottom: 1rem
   &__text
     font-size: 1.57rem
-    line-height: 131% 
+    line-height: 143.3% 
     max-width: 35.7rem
-    margin: 0 0 3.5rem 0
+    margin: 0 0 3.3rem 0
   &__button
+    max-width: 14.786rem
+    width: 100%
     margin-right: 1.43rem
-    padding: 1.4rem 2.5rem
+    padding: 1.2rem 1.5rem
   &__instagram
     position: absolute
     left: 0
@@ -87,11 +89,12 @@
     &:hover
       color: $light
 .title
-  margin: 0 
+  margin: 0
+  margin-bottom: 1.1rem 
   font-family: 'Yeseva One', cursive
   text-transform: uppercase
-  font-size: 2.857rem
-  line-height: 1.4
+  font-size: 2.855rem
+  line-height: 1.3
   font-weight: normal
   &--primary
     color: $primary
