--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -7,27 +7,32 @@
   align-items: flex-start
   justify-content: space-between
 .col
-  flex-basis: 32%
+  flex-basis: 31.715%
 .card
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  &__maxmargin
+    margin-left: 2.429rem
+  &__minmargin
+    margin-left: 2.214rem
   &__image
     display: block
     width: 100%
   &__text
     position: relative
-    margin: 0 auto
-    margin-top: -9.3rem
-    padding: 1.79rem 2.14rem 
-    max-width: 23.6rem
+    margin-top: -9.1rem
+    padding: 1.79rem 0
+    width: 84.184%
     background-color: $light
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03) //rgba(0, 0, 0, 0.03)
   &__title
     font-family: 'Yeseva One', cursive
     font-size: 1.29rem
     margin-top: 0
-    margin-bottom: 0.7rem
+    margin-bottom: -0.4rem
   &__list
-    padding: 0 0 0 1rem 
-    margin: 0
+    padding: 0 
     font-size: 1.07rem
     line-height: 1.79rem
     color: $secondary
